<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_background"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <DatePicker
                android:id="@+id/alarm_input_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:visibility="visible"/>

            <TimePicker
                android:id="@+id/alarm_input_time"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:headerBackground="@color/black"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alarm_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="visible"
                android:background="@drawable/grey_button"
                android:text="@string/cancel"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alarm_next_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/blue_button"
                android:text="@string/next"
                android:visibility="visible" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/alarm_set_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/blue_button"
                android:text="@string/set"
                android:layout_weight="1"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>